Working ticket retrieval metho added to Athena class.

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 ATHENA_CLIENT_ID=api_client_id
 ATHENA_USERNAME=uphs_username
 ATHENA_PASSWORD=uphs_password
+ATHENA_BASE_URL=https://athena.api.auth.com/api/
 ATHENA_AUTH_URL=https://athena.api.auth.com/api/
-ATHENA_BASE_URL=https://athena.api.endpoint.com/api/
+ATHENA_INCIDENT_VIEW_URL=https://athena.api.auth.com/api/
+ATHENA_INCIDENT_URL=https://athena.api.auth.com/api/
 ATHENA_JSON_TEMPLATE='[{"key":"value"}]'
