--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,6 @@ SKILL.md
 /misc
 /tests
 /documents
-/__pycache__/
-/services/__pycache__/
-/app/static/static_test/
+/__pycache__
+/services/__pycache__
+/app/static/static_test
