Text generation LLM will now receive keyword and ticket type-filtered support group data for the input prompt context, meaning significantly smaller input context sizes. Also, Validation ticket recommendations will provide three of the best matching support groups for the user to select from, not just one to make up for LLM decision-making inaccuracy.

--- a/.clineignore
+++ b/.clineignore
@@ -1,5 +1,8 @@
 ir_embeddings.jsonl
 __init__.py
+support_group_description.json
+support_group_keywords.json
+locations.json
 
 /__pycache__/
 /services/__pycache__/
