Fix Flask routing: create app.py entry point and update app.yaml

--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,10 @@
 command: [
   "flask",
   "--app",
-  "run.py",
-  "run"
+  "app:app",
+  "run",
+  "--host",
+  "0.0.0.0",
+  "--port",
+  "8080"
 ]
